--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
    <td> Password:</td>
    <td> <input type="password"></td></tr>
    </table><br>
-   <tr> <a href="D:\my world\html\razin\web development\loginpage.html"><input type="submit" name="" id=""></a></tr>
+   <tr> <a href="loginpage.html"><input type="submit" name="" id=""></a></tr>
 
-   <a href="D:\my world\html\razin\web development\signup.html"><p>Don't have an account?</p></a>
+   <a href="signup.html"><p>Don't have an account?</p></a>
     </center>
 </body>
 </html>
