--- a/details.html
+++ b/details.html
@@ -24,6 +24,6 @@
             <td>25/11/23</td>
         </tr>
     </table>
-    <a href="D:\my world\html\razin\web development\addtask.html">Add Task</a>
+    <a href="addtask.html">Add Task</a>
 </body>
 </html>
