--- a/login2.html
+++ b/login2.html
@@ -18,7 +18,7 @@
    <td> Password:</td>
    <td> <input type="password"></td></tr>
    </table><br>
-   <tr> <a href="D:\my world\html\razin\web development\loginpage.html"><input type="submit" name="" id=""></a></tr>
+   <tr> <a href="loginpage.html"><input type="submit" name="" id=""></a></tr>
 
    
     </center>
