--- a/loginpage.html
+++ b/loginpage.html
@@ -10,11 +10,11 @@
    <table>
     <tr>
         <td>Task 1:Create private website</td>
-        <td><a href="D:\my world\html\razin\web development\details.html"><p>view</p></a></td>
+        <td><a href="details.html"><p>view</p></a></td>
     </tr>
     <tr>
         <td>Task 2:Submit bootcamp project</td>
-        <td><a href="D:\my world\html\razin\web development\details.html"><p>view</p></a></td>
+        <td><a href="details.html"><p>view</p></a></td>
     </tr>
    </table>
     </center>
