--- a/signup.html
+++ b/signup.html
@@ -18,7 +18,7 @@
             <td><input type="password" name="" id=""></td>
         </tr>
     </table>
-    <a href="D:\my world\html\razin\web development\login2.html"><input type="submit"></a>
+    <a href="login2.html"><input type="submit"></a>
     </center>
 </body>
 </html>
